--- a/style.css
+++ b/style.css
@@ -73,46 +73,33 @@ h3{
     height: 300px;
 }
 
-.swiper-container {
+.swiperjs {
     height: 100%;
 }
-  .swiper-slide {
+  .swiperjs  .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    
   }
 
 
-  /* .swiperjsone{
-    border: 3px solid red;
-  } */
 
 
-  .sliderone{
-      /* border: 2px solid yellow; */
-      height: 200px;
-      width: 80%;
-      margin: 0 auto;
+  
+
+  .swipertwo{
+       width: 100%;
+      padding-top: 50px;
+      padding-bottom: 50px;
   }
 
-  .swiper-containerone{
-      height: 100%;
-      width: 100%;
-      /* padding-top: 50px;
-      padding-bottom: 50px; */
+  .swipertwo  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
   }
-
-  .swiper-slideone{
-      background-position:center;
-      background-size: cover;
-      width: 100%;
-      height: 100px;
-      border: 3px solid blueviolet;
-  }
-
   footer{
       background-color:yellow;
       display: flex;
