--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav .nav-links{
     object-fit: cover;
 }
 .tournaments{
+    columns: 2;
     display: flex;
     width: 80%;
     margin: 0 auto;
@@ -113,6 +114,30 @@ h3{
     width: 300px;
     height: 300px;
   }
+
+  .swiperthree .swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+  .swiperthree .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
   footer{
       background-color:yellow;
       display: flex;
